@@ -263,6 +263,12 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="True"/>
         </record>
 
+        <record model="ir.model.button" id="dunning_reschedule_button">
+            <field name="name">reschedule</field>
+            <field name="string">Reschedule</field>
+            <field name="model" search="[('model', '=', 'account.dunning')]"/>
+        </record>
+
         <record model="ir.ui.view" id="dunning_create_start_view_form">
             <field name="model">account.dunning.create.start</field>
             <field name="type">form</field>
@@ -296,5 +302,10 @@ this repository contains the full copyright notices and license terms. -->
             <field name="action" ref="wizard_dunning_process"/>
         </record>
 
+        <record model="ir.action.wizard" id="act_reschedule_dunning_wizard">
+            <field name="name">Reschedule Dunning</field>
+            <field name="wiz_name">account.dunning.reschedule</field>
+            <field name="model">account.dunning</field>
+        </record>
     </data>
 </tryton>
