@@ -1,3 +1,5 @@
+* Add wizard to reschedule dunning
+
 Version 6.0.0 - 2021-05-03
 * Bug fixes (see mercurial logs for details)
 
